<resources>
    <string name="app_name">Covid-19 App</string>
    <string name="action_settings">Settings</string>
    <string name="covid_19_stats">Covid-19 Stats</string>
    <string name="worldwide">Worldwide</string>
    <string name="select_country">Select Country</string>
    <string name="confirmed">Confirmed</string>
    <string name="_0">0</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="last_updated_dd_mm_yy">Last Updated: DD / MM / YY</string>
</resources>
