<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/appHeader"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/covid_19_stats"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:text="@string/worldwide"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    android:id="@+id/showWorldStatsButton"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/blue_background"/>

                <Button
                    android:text="@string/select_country"
                    android:padding="5dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/showStatsByCountry"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/blue_on_white_background"/>

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:stretchColumns="*"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/blue_background"
            android:layout_height="wrap_content">

            <TableRow>

                <LinearLayout
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/confirmed"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/confirmedStat"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/recovered"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:id="@+id/recoveredStat"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:text="@string/deaths"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:id="@+id/deathStats"
                        android:textColor="@color/colorWhite"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/appHeader"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/last_updated_dd_mm_yy"
                android:textAlignment="textEnd"
                android:id="@+id/lastUpdated"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content" />

            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="*"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAsh"
                android:layout_height="wrap_content">

                <TableRow>

                    <TextView
                        android:text="Country"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:text="Confirmed"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:text="Recovered"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <TextView
                        android:text="Deaths"
                        android:textColor="@color/colorRed"
                        />



                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/statsRecyclerView"
                android:nestedScrollingEnabled="false"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>